fix spacing

--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -24,10 +24,6 @@
   left: 60px;
 }
 
-.profile-title {
-  margin-bottom: 0;
-}
-
 .movie-div {
   top: 351px;
   right: 60px;
