--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -13,11 +13,23 @@
 .resume-text {
   transform: skewX(20deg);
   padding-left: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .profile-content {
   font-size: 12px;
   font-weight: 300;
+}
+
+.profile-title {
+  margin-bottom: 0;
+}
+
+.title {
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
 
 .resume-content {
@@ -52,10 +64,6 @@
   padding-left: 0;
   list-style: none;
   margin-top: 0;
-}
-
-.skills-title {
-  margin-bottom: 5px;
 }
 
 .skills-list-item {
